--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,10 +18,10 @@ build:
 requirements:
   host:
     - pip
-    - python >=2.6|>=3.3
+    - python >=2.6,<3|>=3.3
   run:
     - kwonly-args >=1.0.7
-    - python >=2.6|>=3.3
+    - python >=2.6,<3|>=3.3
 
 test:
   imports:
