--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,8 +28,13 @@ test:
     - jsoncfg
   commands:
     - pip check
+    - pytest tests
   requires:
+    - mock
     - pip
+    - pytest
+  source_files:
+    - tests
 
 about:
   home: https://github.com/pasztorpisti/json-cfg
